# lists-fabriziofranco

./: CMakeLists.txt  circular.h  forward.h  linked.h  list.h  main.cpp  node.h
iterators/: bidirectional_iterator.h  forward_iterator.h
test/: tester.cpp
